move waves up a bit

--- a/web/src/components/demo-pages/intro/intro.css
+++ b/web/src/components/demo-pages/intro/intro.css
@@ -10,7 +10,7 @@ html {
     width: 100vw;
     background: var(--white) url('./assets/waves.svg') no-repeat center;
     background-size: contain;
-
+    background-position-y: 15%;
     .localization-select {
         width: 200px;
         position: absolute;
