eof scroll reveals only last element

--- a/web/src/components/demo-pages/kiosk/create-account.css
+++ b/web/src/components/demo-pages/kiosk/create-account.css
@@ -36,6 +36,10 @@
                 width: 0.28rem;
                 border-radius: 0.31rem;
             }
+
+            li:last-child {
+                margin-bottom: 350px;
+            }
         }
     }
 }
