--- a/web/src/components/vars.css
+++ b/web/src/components/vars.css
@@ -76,6 +76,7 @@
 @custom-media --md-only (width >= 768px) and (width < 992px);
 @custom-media --lg-only (width >= 992px) and (width < 1200px);
 @custom-media --xl-only (width >= 1200px);
+@custom-media --demo-only (width < 1110px);
 
 @custom-media --tall (height > 800px);
 
