Remove the "scroller" and "scrollee" scroll containers
A more ambitious follow-up to my [my previous layout PR](https://github.com/mozilla/common-voice/pull/2863).

> Prompted by a surprising layout breakage on our new error pages, I found some oddities in our page layout. This is my attempt to simplify a few years of uh, iterative development.

Prior to this change, each of our pages lived within a nested `div#scroller` and `div#scrollee` container. On desktop these were inconspicuous wrapper `div`s. But on mobile, `#scroller` took on a `position: fixed` over the viewport, and `#scrollee` scrolled within it. With banners, dynamically-sized elements, and new flexbox layouts, keeping everything in a fixed panel has started to cause surprising bugs:

![An error page, ironically displaying a horrible layout bug](https://i.imgur.com/dDpAvW4.png)

The solution is one part new, one part old. I've combined the simple scroll check introduced in 1c58f6df2a5c with `position: sticky` for a _waaaay_ less verbose and mobile-platform-breaking experience!

It also fixes a bunch of weird overflow bugs that were too annoying to fix individually but really piled up. For instance: banners no-longer block their underlying content!

Before:

![Banner is overlapping the underlying content](https://i.imgur.com/e9FDCT2.png)

After:

![Banner is NOT overlapping the underlying content](https://i.imgur.com/pyPrNpQ.png)

---

*This change should go through some heavy QA!* Things to look out for:

- Pages that now have content overflowing horizontally, including the header bar, backgrounds, and "floating" images.
- Pages with wonky scroll behaviour, especially at the top or bottom of pages.
- Banners or other fixed-position elements that now seem to be in the wrong position.
- Pages that cannot scroll at all…? Hope not!

--- a/web/src/components/layout/nav.css
+++ b/web/src/components/layout/nav.css
@@ -1,10 +1,8 @@
 @import url('../vars.css');
 
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
     display: flex;
     align-items: center;
     height: var(--header-height);
@@ -29,11 +27,9 @@ header {
 
     &.active {
         box-shadow: var(--nav-shadow-overhang);
-        background-color: var(--white);
 
         @media (--lg-up) {
             box-shadow: none;
-            background-color: initial;
         }
     }
 
