Improve mobile error page styling
![Screenshot](https://i.imgur.com/IxM2UI1.png)

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -223,6 +223,7 @@ button {
 #content {
     position: relative;
     min-height: 80vh;
+    overflow-x: hidden;
 
     @media (--md-up) {
         position: unset;
