Position language selector over staging banner
Fixes this:

![Language select input buried underneath the staging banner](https://i.imgur.com/PPIbUVu.png)

cc. @phirework

--- a/maintenance/css/vars.css
+++ b/maintenance/css/vars.css
@@ -19,7 +19,8 @@
 
     --link-color: var(--blue);
 
-    --override-z-index: 3;
+    --override-z-index: 4;
+    --header-z-index: 3;
     --top-z-index: 2;
     --middle-z-index: 1;
     --bottom-z-index: 0;
