not supported adjustments

--- a/web/src/components/demo-pages/not-supported.css
+++ b/web/src/components/demo-pages/not-supported.css
@@ -21,5 +21,8 @@
         align-items: center;
         background: black;
         color: white;
+        p {
+            margin: 0 16px;
+        }
     }
 }
