--- a/web/src/components/demo-pages/kiosk/kiosk.css
+++ b/web/src/components/demo-pages/kiosk/kiosk.css
@@ -24,13 +24,19 @@ html {
     flex-direction: column;
     position: fixed;
     top: 1.75rem;
-    width: 45%;
+    width: 40%;
     max-width: 32.875rem;
     background: #ffffff;
     box-shadow: 0px 1.5rem 3.375rem rgba(0, 0, 0, 0.05);
-    margin-inline-start: 3%;
+    margin-inline-start: 5%;
     border-radius: var(--kiosk-card-border-radius);
     z-index: var(--top-z-index);
+}
+
+@media screen and (min-width: 1400px) {
+    #kiosk-card {
+        margin-inline-start: 15%;
+    }
 }
 
 #kiosk-card--top {
