--- a/web/src/components/demo-pages/kiosk/kiosk.css
+++ b/web/src/components/demo-pages/kiosk/kiosk.css
@@ -28,15 +28,15 @@ html {
     max-width: 32.875rem;
     background: #ffffff;
     box-shadow: 0px 1.5rem 3.375rem rgba(0, 0, 0, 0.05);
-    margin-inline-start: 5%;
+    right: 50%;
+    left: auto;
     border-radius: var(--kiosk-card-border-radius);
     z-index: var(--top-z-index);
 }
 
-@media screen and (min-width: 1400px) {
-    #kiosk-card {
-        margin-inline-start: 15%;
-    }
+[dir='rtl'] #kiosk-card {
+    left: 50%;
+    right: auto;
 }
 
 #kiosk-card--top {
