Issue #2880: Dashboard page fix

--- a/web/src/components/pages/dashboard/challenge/weekly-challenge.css
+++ b/web/src/components/pages/dashboard/challenge/weekly-challenge.css
@@ -76,7 +76,7 @@
     }
 
     .stats-card .filters {
-        flex-direction: row;
+        flex-direction: column;
     }
 
     .challenge-dropdown {
