--- a/web/src/components/plot/plot.css
+++ b/web/src/components/plot/plot.css
@@ -3,6 +3,12 @@
 .plot {
     margin-top: 28px;
     height: 170px;
+    @media (--md-only){
+        width: 175%;
+    }
+    @media (--xs-only){
+        width:200%;
+    }
 
     & .tick-label {
         font-size: var(--font-size-xs);
