Remove unneeded vars imports

--- a/web/src/components/pages/about/about.css
+++ b/web/src/components/pages/about/about.css
@@ -1,5 +1,3 @@
-@import url('../../vars.css');
-
 .about {
     & #content {
         padding: 0;
@@ -34,7 +32,11 @@
         & .vertical-line {
             width: 3px;
             height: 100px;
-            background: linear-gradient(to right, var(--gradient-pink), var(--gradient-purple));
+            background: linear-gradient(
+                to right,
+                var(--gradient-pink),
+                var(--gradient-purple)
+            );
             margin: 0 auto;
 
             @media (--sm-down) {
