Revert "Remove redundant imports (#3084)"
This reverts commit daf030c9900f0b7fee2a11c7b2f22656ffd0d06c.

--- a/web/src/components/pages/about/about.css
+++ b/web/src/components/pages/about/about.css
@@ -1,3 +1,5 @@
+@import url('../../vars.css');
+
 .about {
     & #content {
         padding: 0;
@@ -32,11 +34,7 @@
         & .vertical-line {
             width: 3px;
             height: 100px;
-            background: linear-gradient(
-                to right,
-                var(--gradient-pink),
-                var(--gradient-purple)
-            );
+            background: linear-gradient(to right, var(--gradient-pink), var(--gradient-purple));
             margin: 0 auto;
 
             @media (--sm-down) {
