--- a/web/src/components/pages/about/partners.css
+++ b/web/src/components/pages/about/partners.css
@@ -1,3 +1,5 @@
+@import url('../../vars.css');
+
 .partners {
     border-width: 0;
     padding-right: 1rem;
@@ -30,11 +32,7 @@
             & .line {
                 width: 70px;
                 height: 3px;
-                background: linear-gradient(
-                    to right,
-                    var(--gradient-pink),
-                    var(--gradient-purple)
-                );
+                background: linear-gradient(to right, var(--gradient-pink), var(--gradient-purple));
 
                 @media (--md-down) {
                     margin-bottom: 20px;
