--- a/web/src/components/pages/dashboard/challenge/challenge-offline.css
+++ b/web/src/components/pages/dashboard/challenge/challenge-offline.css
@@ -1,3 +1,5 @@
+@import url('../../../vars.css');
+
 #content .challenge-offline {
     background: url('./images/wave.svg') no-repeat bottom center;
     background-size: 100%;
