--- a/web/src/components/primary-buttons/primary-buttons.css
+++ b/web/src/components/primary-buttons/primary-buttons.css
@@ -1,3 +1,5 @@
+@import url('../vars.css');
+
 .primary-button {
     position: relative;
     display: flex;
@@ -6,7 +8,7 @@
 
     margin: 0 18px;
 
-    @media (--md-up) {
+    @media(--md-up) {
         margin: 0 40px;
     }
 
@@ -25,8 +27,7 @@
         }
     }
 
-    & button,
-    & a {
+    & button, & a {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -64,19 +65,14 @@
         }
     }
 
-    &.record .background,
-    &.play .background {
+    &.record .background, &.play .background {
         opacity: 0.5;
         background: linear-gradient(to left, #88d1f1, #b1b5e5);
     }
 
     &.stop .background {
         opacity: 0.7;
-        background: linear-gradient(
-            to right,
-            var(--gradient-pink),
-            var(--gradient-purple)
-        );
+        background: linear-gradient(to right, var(--gradient-pink), var(--gradient-purple));
     }
 
     &:hover .background {
