--- a/web/src/components/layout/nav.css
+++ b/web/src/components/layout/nav.css
@@ -89,6 +89,7 @@ header {
 
 .localization-select {
     position: relative;
+    font-family: 'Inter', sans-serif;
 
     &::before {
         content: '';
