Allow email edit button to adapt to text length

--- a/web/src/components/pages/profile/settings/settings.css
+++ b/web/src/components/pages/profile/settings/settings.css
@@ -87,7 +87,7 @@
 
         @media (--md-up) {
             flex: 0;
-            min-width: 134px;
+            min-width: auto;
         }
 
         & svg {
