--- a/web/src/components/pages/profile/layout.css
+++ b/web/src/components/pages/profile/layout.css
@@ -4,7 +4,8 @@
     &.info,
     &.avatar,
     &.settings,
-    &.delete {
+    &.delete,
+    &.download {
         & header {
             @media (--lg-up) {
                 max-width: var(--wide-desktop-width);
