--- a/web/src/components/plot/plot.css
+++ b/web/src/components/plot/plot.css
@@ -19,7 +19,9 @@
 }
 
 .scrollable {
-    overflow-x: scroll;
+    @media (--md-down) {
+        overflow-x: scroll;
+    }
 
     .plot {
         @media (--md-down) {
