Minor UX bugfixes

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -217,6 +217,7 @@ button {
 #content {
     position: relative;
     min-height: 80vh;
+    border-top: 1px solid var(--light-grey);
 
     @media (--md-up) {
         position: unset;
