--- a/web/src/components/ui/ui.css
+++ b/web/src/components/ui/ui.css
@@ -228,6 +228,7 @@ button.card-action:focus.focus-visible path {
 
         &:disabled {
             color: var(--warm-grey);
+            cursor:  not-allowed;
         }
     }
 
