--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -225,7 +225,7 @@ button {
         padding: 0 var(--page-margin);
     }
 
-    & > div {
+    > div {
         box-sizing: border-box;
         transition: opacity var(--transition-duration-slow) var(--easing);
         max-width: var(--desktop-width);
@@ -237,6 +237,10 @@ button {
         @media (--md-up) {
             min-height: auto;
             padding: 0;
+        }
+
+        @media (--xl-up) {
+            max-width: var(--wide-desktop-width);
         }
     }
 }
