--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -55,8 +55,9 @@ body,
 #main {
     padding: 0;
     margin: 0;
-    min-height: 100vh;
     width: 100%;
+    height: 100vh;
+    max-height:  100%;
 }
 
 h1,
