--- a/web/src/components/pages/profile/download/download.css
+++ b/web/src/components/pages/profile/download/download.css
@@ -5,105 +5,113 @@
         margin-top: 0;
     }
 
-    & .download-item {
+    .download-item {
         display: flex;
         flex-direction: row;
 
-        & > * {
+        > * {
             box-sizing: border-box;
             width: calc(50% - var(--profile-column-margin) / 2);
             margin-inline-start: var(--profile-column-margin);
         }
 
-        & > *:first-child {
+        > *:first-child {
             width: 5rem;
         }
 
         @media (--sm-down) {
             flex-direction: column;
-            & > * {
+            > * {
                 width: 100%;
                 margin-bottom: 10px;
                 margin-inline-start: 0;
             }
-            & > *:first-child {
+            > *:first-child {
                 display: none;
             }
         }
     }
 
-    & .section-title {
+    .section-title {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    & h2 {
+    h2 {
         margin-bottom: 10px;
         font-family: var(--strong-font-family);
         font-size: var(--font-size-lg);
         font-weight: 600;
     }
 
-    & .section-info {
+    .section-info {
         border-bottom: 2px solid var(--grey);
         padding-bottom: 2em;
         color: var(--near-black);
     }
 
-    & .section-body {
+    .section-body {
         padding-top: 32px;
         display: flex;
         flex-direction: column;
     }
 
-    & .download-button {
-        margin-top: 2em;
-        background-color: var(--valid-green);
+    .download-button {
+        margin: 0 auto;
+        background-color: var(--blue);
+        padding: 0.85rem 1rem;
+        border-color: var(--blue);
     }
 
-    & .download-item {
+    .download-item {
         border-bottom: 2px solid var(--grey);
         padding-bottom: 2em;
         margin-bottom: 2em;
 
-        & p {
+        p {
             color: var(--near-black);
         }
     }
 
-    & .download-item-info {
+    .download-item-info {
         flex-shrink: 0.2;
     }
 
-    & .download-item-size2 {
+    .download-item-size2 {
         border-left: 2px solid var(--grey);
         border-right: 2px solid var(--grey);
         padding-left: 3em;
     }
 
-    & .download-size {
+    .download-size {
         text-transform: uppercase;
     }
 
-    & .download-item svg {
+    .download-item svg {
         filter: grayscale(1) contrast(5);
     }
 
-    & .download-request-button svg {
+    .download-request-button svg {
         padding-right: 1em;
     }
 
     &.download-requests .section-body {
-        row-gap: 1rem;
+        padding-top: 0;
     }
 
-    & .download-request-item {
+    .download-request-item {
         display: grid;
         grid-template-columns: 5rem auto min-content;
         grid-template-areas:
             'icon title button'
             'icon description button';
+        padding: 2rem 0;
+        border-bottom: 1px solid var(--grey);
+
+        &:last-child {
+            border-bottom: 0;
+        }
 
         @media (--sm-down) {
             grid-template-columns: 1fr;
@@ -112,44 +120,61 @@
                 'title'
                 'description'
                 'button';
-            & .download-request-icon {
+            .download-request-icon {
                 display: none;
             }
         }
 
-        & .download-request-icon {
+        .download-request-icon {
             grid-area: icon;
             align-self: center;
             justify-self: center;
         }
-        & .download-request-title {
+        .download-request-title {
             grid-area: title;
             align-self: flex-end;
         }
-        & .download-request-description {
+        .download-request-description {
             grid-area: description;
             color: var(--near-black);
         }
-        & .download-request-button {
+        .download-request-button {
             grid-area: button;
             align-self: center;
         }
     }
 
-    & .download-disabled {
+    .download-disabled {
         font-size: var(--font-size-xs);
         color: var(--near-black);
     }
 }
 
+.download-request-modal {
+    .section-info {
+        padding: 0;
+        border: 0;
+    }
+
+    textarea {
+        margin-top: 1rem;
+    }
+
+    a {
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
 .download-request-modal.inner {
     text-align: match-parent;
 
-    & ul {
+    ul {
         margin: 0 0 32px 0;
     }
 
-    & .download-request-nl-links {
+    .download-request-nl-links {
         white-space: pre;
         overflow-wrap: normal;
         overflow-x: scroll;
