fix(home page): fix icon positioning on hero section

--- a/web/src/components/pages/new-home/home.css
+++ b/web/src/components/pages/new-home/home.css
@@ -281,6 +281,7 @@
                             height: 108px;
                             width: 108px;
                             right: 10%;
+                            bottom: 2%;
                             position: relative;
                         }
 
