--- a/web/src/components/pages/new-home/home.css
+++ b/web/src/components/pages/new-home/home.css
@@ -8,11 +8,11 @@
             justify-content: space-between;
             width: 100%;
             background: url('./assets/home-bg-waves.png');
-            background-size: 100% 110%;
+            background-size: 100% 100%;
 
             @media (--xl-up) {
-                height: 58vh;
-                min-height: 600px;
+                height: 65vh;
+                min-height: 750px;
             }
 
             @media (--md-and-lg-only) {
@@ -32,7 +32,7 @@
             .hero-text-wrapper {
                 display: flex;
                 justify-content: end;
-                flex: 0.74;
+                flex: 0.7;
 
                 @media (--md-and-lg-only) {
                     flex: 1;
@@ -93,6 +93,10 @@
                     p {
                         font-size: 20px;
 
+                        &:nth-of-type(2) {
+                            text-wrap: balance;
+                        }
+
                         @media (--md-and-lg-only) {
                             font-size: 16px;
                         }
@@ -149,145 +153,202 @@
                     position: relative;
                 }
 
-                .buttons {
-                    position: absolute;
-                    width: 35%;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
+                .hero-background {
+                    background: url('./assets/hero-hd.jpg');
+                    background-size: cover;
+                    border-top-left-radius: 60%;
+                    border-bottom-left-radius: 60%;
+                    width: 48vw;
+                    height: 60vh;
 
-                    @media (--xl-up) {
-                        height: 53%;
+                    @media (--xxl-up) {
+                        min-height: 600px;
+                        min-width: 600px;
                     }
 
-                    @media (--md-and-lg-only) {
-                        height: 30%;
-                        width: 40%;
+                    @media (--md-up) {
+                        max-width: 620px;
+                        max-height: 600px;
                     }
 
-                    @media (--sm-only) {
-                        width: 100%;
+                    @media (--lg-only) {
+                        border-bottom-left-radius: 60%;
+                        border-top-left-radius: 60%;
+                        height: 50vh;
+                        width: 58vw;
+                    }
+
+                    @media (--md-only) {
+                        width: 60vw;
+                        height: 50vh;
+                    }
+
+                    @media (width >= 768px) and (width < 950px) {
+                        height: 40vh;
+                        width: 60vw;
                     }
 
                     @media (--sm-down) {
-                        flex-direction: column-reverse;
-                        top: 50%;
+                        width: 100vw;
+                        height: 50vh;
+                        margin-block: 36px;
                     }
 
                     @media (--xs-down) {
-                        width: 415px;
-                        top: 45%;
+                        border-top-left-radius: 45%;
+                        width: 100vw;
+                        display: flex;
+                        align-items: center;
                     }
 
-                    .listen-container {
-                        width: fit-content;
-                        position: relative;
+                    .buttons {
+                        width: inherit;
                         display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        height: 52%;
 
-                        @media (--md-and-lg-only) {
-                            margin-inline-start: -8px;
+                        @media (--sm-up) {
+                            position: absolute;
+                        }
+
+                        @media (--xl-up) {
+                            width: auto;
+                            position: relative;
+                            height: 54vh;
+                            min-height: 630px;
+                        }
+
+                        @media (--lg-only) {
+                            height: 44%;
+                            width: 50vw;
+                        }
+
+                        @media (--md-only) {
+                            height: 43%;
+                        }
+
+                        @media (width >= 768px) and (width < 950px) {
+                            height: 38%;
                         }
 
                         @media (--sm-down) {
-                            margin-inline-start: 36px;
-                            margin-block-end: 0px;
+                            flex-direction: column-reverse;
+                            top: 35%;
                         }
 
-                        .listen {
-                            background: var(--white);
-                            height: 80px;
-                            width: 80px;
-                            border-radius: 50%;
-                            color: var(--white);
-                            border: 1px solid;
-                            z-index: var(--middle-z-index);
+                        @media (--xs-down) {
+                            position: absolute;
+                            width: 100vw;
+                            top: 35%;
+                        }
 
-                            @media (--xl-up) {
-                                margin-block-start: 60px;
-                                margin-inline-start: 64px;
+                        .listen-container {
+                            width: fit-content;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            @media (--md-up) {
+                                position: absolute;
+                                left: 40px;
+                                top: 40px;
                             }
 
                             @media (--md-and-lg-only) {
-                                height: 64px;
-                                width: 64px;
+                                margin-inline-start: 20px;
                             }
 
-                            svg {
-                                width: 25px;
-                                height: 25px;
+                            @media (--sm-down) {
+                                margin-inline-start: 36px;
+                                margin-block-end: 0px;
+                            }
 
-                                path {
-                                    fill: var(--valid-green);
+                            .listen {
+                                background: var(--white);
+                                height: 80px;
+                                width: 80px;
+                                border-radius: 50%;
+                                color: var(--white);
+                                border: 1px solid;
+                                z-index: var(--middle-z-index);
+
+                                @media (--md-and-lg-only) {
+                                    height: 64px;
+                                    width: 64px;
+                                }
+
+                                svg {
+                                    width: 25px;
+                                    height: 25px;
+
+                                    path {
+                                        fill: var(--valid-green);
+                                    }
+                                }
+                            }
+
+                            .background {
+                                position: absolute;
+                                margin: 0 auto;
+                                border-radius: 50%;
+                                width: 80px;
+                                height: 80px;
+                                background: linear-gradient(
+                                    90deg,
+                                    var(--gradient-cyan) 0%,
+                                    var(--gradient-purple) 100%
+                                );
+                                filter: blur(15.882353782653809px);
+
+                                @media (--md-and-lg-only) {
+                                    top: 0;
+                                    left: 0;
+                                }
+
+                                @media (--sm-down) {
+                                    display: none;
                                 }
                             }
                         }
 
-                        .background {
-                            position: absolute;
-                            margin: 0 auto;
+                        .listen,
+                        .speak {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
+
+                        .speak {
+                            background: var(--white);
+                            height: 136px;
+                            width: 136px;
                             border-radius: 50%;
-                            width: 80px;
-                            height: 80px;
-                            background: linear-gradient(
-                                90deg,
-                                var(--gradient-cyan) 0%,
-                                var(--gradient-purple) 100%
-                            );
-                            filter: blur(15.882353782653809px);
+                            align-self: center;
+                            z-index: var(--top-z-index);
 
                             @media (--xl-up) {
-                                top: 50%;
-                                left: 45%;
+                                position: absolute;
+                                bottom: 8px;
+                                right: 150px;
+                            }
+
+                            @media (--lg-down) {
+                                align-self: flex-end;
                             }
 
                             @media (--md-and-lg-only) {
-                                top: 0;
-                                left: 0;
+                                height: 108px;
+                                width: 108px;
+                                position: absolute;
+                                bottom: 10px;
+                                right: 40px;
                             }
 
-                            @media (--sm-down) {
-                                display: none;
+                            svg {
+                                width: 45px;
+                                height: 45px;
                             }
-                        }
-                    }
-
-                    .listen,
-                    .speak {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-
-                    .speak {
-                        background: var(--white);
-                        height: 136px;
-                        width: 136px;
-                        border-radius: 50%;
-                        align-self: center;
-                        z-index: var(--top-z-index);
-
-                        @media (--xl-up) {
-                            position: relative;
-                            left: 20%;
-                        }
-
-                        @media (--lg-down) {
-                            align-self: flex-end;
-                        }
-
-                        @media (--md-and-lg-only) {
-                            height: 108px;
-                            width: 108px;
-                            right: 10%;
-                            bottom: 2%;
-                            position: relative;
-                        }
-
-                        svg {
-                            width: 45px;
-                            height: 45px;
                         }
                     }
                 }
@@ -309,32 +370,7 @@
                     }
 
                     @media (--sm-down) {
-                        top: 48%;
-                    }
-                }
-
-                img.hero {
-                    height: 50vh;
-                    width: 45vw;
-                    border-top-left-radius: 50%;
-                    border-bottom-left-radius: 55%;
-
-                    @media (--xxl-up) {
-                        width: 35vw;
-                        min-height: 550px;
-                    }
-
-                    @media (--md-and-lg-only) {
-                        height: 35vh;
-                    }
-
-                    @media (--sm-down) {
-                        width: 105vw;
-                        height: auto;
-                    }
-
-                    @media (--xs-down) {
-                        height: 400px;
+                        top: 50%;
                     }
                 }
 
